--- a/app/src/main/res/layout/activity_student_time_table.xml
+++ b/app/src/main/res/layout/activity_student_time_table.xml
@@ -14,6 +14,8 @@
             android:id="@+id/listView1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:divider="@null"
+            android:dividerHeight="0dp"
             android:layout_below="@+id/linearLayout1" />
 
 
