--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8EAF6"
     tools:context="com.example.vikrant.attendancemanageradmin.MainActivity">
 
 
@@ -12,16 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+
+            card_view:cardElevation="3dp">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="50dp"
+            android:paddingTop="25dp"
             android:paddingLeft="25dp"
             android:paddingRight="25dp">
 
-            <!-- Email Label -->
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -34,7 +41,7 @@
                     android:hint="UserName" />
             </android.support.design.widget.TextInputLayout>
 
-            <!-- Password Label -->
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,5 +65,6 @@
                 android:text="Login"/>
 
         </LinearLayout>
+        </android.support.v7.widget.CardView>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
